--- a/cart.html
+++ b/cart.html
@@ -85,53 +85,69 @@
                 <div class="row">
                     <div class="col-md-9">
                         <div class="row cart-head-title">
-                            <div class="col-5 col-sm-5 col-md-5 col-lg-5">
+                            <div class="col-4 col-sm-5 col-md-5 col-lg-5">
                                 PRODUCT
                             </div>
                             <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                                 PRICE
                             </div>
-                            <div class="col-3 col-sm-3 col-md-3 col-lg-3">
+                            <div class="col-4 col-sm-3 col-md-3 col-lg-3">
                                 QTY
                             </div>
                             <div class="col-2 col-sm-2 col-md-2 col-lg-2">
                                 TOTAL
                             </div>
                         </div>
-                        <div class="row first-items">
-                            <div class="col-5 col-sm-5 col-md-5 col-lg-5 d-flex align-items-center cart-item-style">
-                                <p>X</p>
-                                <img src="./images/gray.jpg" alt="">
-                                <p>'Design and Typography' by G. williams</p>
+                        <div id='first-items' class="row first-items">
+                            <div class="col-4 col-sm-5 col-md-5 col-lg-5 d-flex  cart-item-style">
+                                <div class="row align-items-center">
+                                    <div class="col-12 col-sm-1">
+                                        <button id="first" class="cross">X</button>
+                                    </div>
+                                    <div class="col-12 col-sm-5">
+                                        <img src="./images/gray.jpg" alt="">
+                                    </div>
+                                    <div class="col-12 col-sm-5">
+                                        <p>'Design and Typography' by G. williams</p>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col-2 col-sm-2 col-md-2 col-lg-2 d-flex align-items-center">
                                 $<span id="product1price">40.99</span>
                             </div>
-                            <div class="col-3 col-sm-3 col-md-3 col-lg-3 d-flex align-items-center">
+                            <div class="col-4 col-sm-3 col-md-3 col-lg-3 d-flex align-items-center">
                                 <div class="d-flex quantity">
-                                    <button id="product1minus" class="btn btn-default"><i><</i></button>
+                                    <button id="product1minus" class="btnMProduct"><i><</i></button>
                                     <input id="product1quantity" type="text" class="form" value="1">
-                                    <button id="product1plus" class="btn btn-default"><i>></i></button>
+                                    <button id="product1plus" class="btnPProduct"><i>></i></button>
                                  </div>
                             </div>
                             <div class="col-2 col-sm-2 col-md-2 col-lg-2 d-flex align-items-center">
                                 $<span id="product1totalPrice">40.99</span>
                             </div>
                         </div>
-                        <div class="row second-items">
-                            <div class="col-5 col-sm-5 col-md-5 col-lg-5 d-flex align-items-center cart-item-style">
-                                <p>X</p>
-                                <img src="./images/gray.jpg" alt="">
-                                <p>Lifestyle magazine Kinfolk</p>
+                        <div id='second-items' class="row second-items">
+                            <div class="col-4 col-sm-5 col-md-5 col-lg-5 d-flex align-items-center cart-item-style">
+                                <div class="row align-items-center">
+                                    <div class="col-12 col-sm-1">
+                                        <button id="second" class="cross">X</button>
+                                    </div>
+                                    <div class="col-12 col-sm-5">
+                                        <img src="./images/gray.jpg" alt="">
+                                    </div>
+                                    <div class="col-12 col-sm-5">
+                                        <p>Lifestyle magazine Kinfolk</p>
+                                    </div>
+                                </div>
                             </div>
                             <div class="col-2 col-sm-2 col-md-2 col-lg-2 d-flex align-items-center">
                                 $<span id="product2price">80.99</span>
                             </div>
-                            <div class="col-3 col-sm-3 col-md-3 col-lg-3 d-flex align-items-center">
+                            <div class="col-4 col-sm-3 col-md-3 col-lg-3 d-flex align-items-center">
                                 <div class="d-flex quantity">
-                                    <button id="product2minus" class="btn btn-default"><i><</i></button>
+                                    <button id="product2minus" class="btnMProduct"><i><</i></button>
                                     <input id="product2quantity" type="text" class="form" value="1">
-                                    <button id="product2plus" class="btn btn-default"><i>></i></button>
+                                    <button id="product2plus" class="btnPProduct"><i>></i></button>
                                  </div>
                             </div>
                             <div class="col-2 col-sm-2 col-md-2 col-lg-2 d-flex align-items-center">
