--- a/index.html
+++ b/index.html
@@ -51,9 +51,14 @@
                         <a class="nav-link" href="#favourite">
                             <img src="./images/favourite.png" alt="">
                         </a>
-                        <a class="nav-link cart-view" href="#cart">
+                        <a class="nav-link cart-view">
+                            <div class="cart-items-number">
                             <img id="cart-button" src="./images/cart.png" alt="">
-
+                            <div class="show-number">
+                                <span id="cart-size-number">2</span>
+                            </div>
+                            <!-- <img id="cart-button" src="./images/cart.png" alt="">
+                            <div class="cart-size"><span id="cart-size">2</span></div> -->
                         </a>
                     </div>
                 </div>
