--- a/cart.html
+++ b/cart.html
@@ -51,9 +51,9 @@
                         <a class="nav-link" href="#favourite">
                             <img src="./images/favourite.png" alt="">
                         </a>
-                        <a class="nav-link" href="#cart">
+                        <!-- <a class="nav-link" href="#cart">
                             <img src="./images/cart.png" alt="">
-                        </a>
+                        </a> -->
                     </div>
                 </div>
             </div>
@@ -105,7 +105,7 @@
                                         <button id="first" class="cross">X</button>
                                     </div>
                                     <div class="col-12 col-sm-5">
-                                        <img src="./images/gray.jpg" alt="">
+                                        <img src="./images/item1.jpg" alt="">
                                     </div>
                                     <div class="col-12 col-sm-5">
                                         <p>'Design and Typography' by G. williams</p>
@@ -133,7 +133,7 @@
                                         <button id="second" class="cross">X</button>
                                     </div>
                                     <div class="col-12 col-sm-5">
-                                        <img src="./images/gray.jpg" alt="">
+                                        <img src="./images/item2.jpg" alt="">
                                     </div>
                                     <div class="col-12 col-sm-5">
                                         <p>Lifestyle magazine Kinfolk</p>
@@ -240,7 +240,7 @@
                         <h5>Recent Post</h5>
                         <div class="row footer-items">
                             <div class="col-md-12 col-lg-5">
-                                <img src="./images/gray.jpg" alt="">
+                                <img src="./images/item15.png" alt="">
                             </div>
                             <div class="col-md-8 col-lg-7 item-text-style">
                                 <p>Looking cautiously round,to ascertain that they</p>
@@ -250,7 +250,7 @@
                         <hr>
                         <div class="row footer-items">
                             <div class="col-md-12 col-lg-5">
-                                <img src="./images/gray.jpg" alt="">
+                                <img src="./images/item14.png" alt="">
                             </div>
                             <div class="col-md-12 col-lg-7 item-text-style">
                                 <p>Revolutions of government has would make his</p>
