--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </nav>
             <div id="see-cart" class="cart-all ml-auto">
                 <div id="see-first-cart" class='mini-cart align-items-center '>
-                    <img src="./images/gray.jpg" alt="">
+                    <img src="./images/item1.jpg" alt="">
                     <div class="mini-cart-details">
                         <p>DESIGN AND TYPOGRAPHY BY G. WILLIAMS,BOOK</p>
                         <p>Price : $<span id="cart-first-price">40.99</span></p>
@@ -88,7 +88,7 @@
                     <button id='firstB' class='btn btn-danger  ml-auto'>X</button>
                 </div>
                 <div id="see-second-cart" class='mini-cart align-items-center'>
-                    <img src="./images/gray.jpg" alt="">
+                    <img src="./images/item2.jpg" alt="">
                     <div class="mini-cart-details">
                         <p>BIG ENVELOP MOCKUP PDF AND PSD PACK</p>
                         <p>Price : $<span id="cart-second-price">150</span></p>
@@ -127,7 +127,7 @@
                         <!-- <div class="col-1 col-sm-1"></div> -->
                         <div class=" items col-12 col-sm-12 col-md-6 col-lg-4">
                             <div class="card">
-                                <img src="./images/gray.jpg" class="card-img-top" alt="...">
+                                <img src="./images/item3.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text card-text-style">PAPER BACK BOOK ' I AM HERE NOW '</p>
                                     <h4 class="price-style">$60.99</h4>
@@ -143,7 +143,7 @@
                         </div>
                         <div class=" items col-12 col-sm-12 col-md-6 col-lg-4">
                             <div class="card">
-                                <img src="./images/gray.jpg" class="card-img-top" alt="...">
+                                <img src="./images/item4.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text card-text-style">DRINKING VINEGAR VINYL BOTTLE</p>
                                     <h4 class="price-style">$80.99</h4>
@@ -160,7 +160,7 @@
                         <div class=" items col-12 col-sm-12 col-md-6 col-lg-4">
                             <div class="card">
                                 <div class="sale">
-                                    <img src="./images/gray.jpg" class="card-img-top" alt="...">
+                                    <img src="./images/item5.jpg" class="card-img-top" alt="...">
                                     <button type="button" class="btn btn-danger">sale</button>
                                     <p class="wishlist">Add to wishlist <img src="./images/love.png" alt=""></p>
                                 </div>
@@ -180,7 +180,7 @@
                         <div class=" items col-12 col-sm-12 col-md-6 col-lg-4">
                             <div class="card">
                                 <div class="new-in">
-                                    <img src="./images/gray.jpg" class="card-img-top" alt="...">
+                                    <img src="./images/item6.jpg" class="card-img-top" alt="...">
                                     <button type="button" class="btn btn-success">New In</button>
                                 </div>
                                 <div class="card-body">
@@ -198,7 +198,7 @@
                         </div>
                         <div class=" items col-12 col-sm-12 col-md-6 col-lg-4">
                             <div class="card">
-                                <img src="./images/gray.jpg" class="card-img-top" alt="...">
+                                <img src="./images/item7.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text card-text-style">THUNDEROUS CHARGE/SYNC USB CABLE IN RED</p>
                                     <h4 class="price-style">$80.50</h4>
@@ -214,7 +214,7 @@
                         </div>
                         <div class=" items col-12 col-sm-12 col-md-6 col-lg-4">
                             <div class="card">
-                                <img src="./images/gray.jpg" class="card-img-top" alt="...">
+                                <img src="./images/item8.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text card-text-style">NICE BOTTLE WITH METALL COVER</p>
                                     <h4 class="price-style">$20</h4>
@@ -230,7 +230,7 @@
                         </div>
                         <div class=" items col-12 col-sm-12 col-md-6 col-lg-4">
                             <div class="card">
-                                <img src="./images/gray.jpg" class="card-img-top" alt="...">
+                                <img src="./images/item9.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text card-text-style">MINI CAMERA DURABLE CASING</p>
                                     <h4 class="price-style">$80.50</h4>
@@ -246,7 +246,7 @@
                         </div>
                         <div class=" items col-12 col-sm-12 col-md-6 col-lg-4">
                             <div class="card">
-                                <img src="./images/gray.jpg" class="card-img-top" alt="...">
+                                <img src="./images/item10.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text card-text-style">LIFESTYLE BOOK PAPERBACK</p>
                                     <h4 class="price-style">$60.30</h4>
@@ -262,7 +262,7 @@
                         </div>
                         <div class=" items col-12 col-sm-12 col-md-6 col-lg-4">
                             <div class="card">
-                                <img src="./images/gray.jpg" class="card-img-top" alt="...">
+                                <img src="./images/item11.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <p class="card-text card-text-style">GIGANTIC ICE CREAM POOL FLOAT</p>
                                     <h4 class="price-style">$80</h4>
@@ -301,7 +301,7 @@
                         <!-- cart items -->
                         <div id="first-items" class="row cart-items">
                             <div class="col-6 col-sm-6 col-md-4 col-lg-5">
-                                <img src="./images/gray.jpg" alt="">
+                                <img src="./images/item1.jpg" alt="">
                             </div>
                             <div class="col-6 col-sm-6 col-md-8 col-lg-7 item-text-style">
                                 <p>DESIGN AND TYPOGRAPHY BY G. WILLIAMS, BOOK</p>
@@ -312,7 +312,7 @@
                         <hr>
                         <div id="second-items" class="row cart-items">
                             <div class="col-6 col-sm-6 col-md-4 col-lg-5">
-                                <img src="./images/gray.jpg" alt="">
+                                <img src="./images/item2.jpg" alt="">
                             </div>
                             <div class="col-6 col-sm-6 col-md-8 col-lg-7 item-text-style">
                                 <p>BIG ENVELOP MOCKUP PDF AND PSD PACK</p>
@@ -389,7 +389,7 @@
                             <hr>
                             <div class="row cart-items">
                                 <div class="col-6 col-sm-6 col-md-4 col-lg-5">
-                                    <img src="./images/gray.jpg" alt="">
+                                    <img src="./images/item12.jpg" alt="">
                                 </div>
                                 <div class="col-6 col-sm-6 col-md-8 col-lg-7 item-text-style">
                                     <p>ON-LINE STORE APP WEB TEMPLATE</p>
@@ -402,7 +402,7 @@
                             <hr>
                             <div class="row cart-items">
                                 <div class="col-6 col-sm-6 col-md-4 col-lg-5">
-                                    <img src="./images/gray.jpg" alt="">
+                                    <img src="./images/item13.jpg" alt="">
                                 </div>
                                 <div class="col-6 col-sm-6 col-md-8 col-lg-7 item-text-style">
                                     <p>BRAND IDENTITY TEMPLATE PSD PACK</p>
@@ -453,7 +453,7 @@
                         <h5>Recent Post</h5>
                         <div class="row footer-items">
                             <div class="col-md-12 col-lg-5">
-                                <img src="./images/gray.jpg" alt="">
+                                <img src="./images/item15.png" alt="">
                             </div>
                             <div class="col-md-8 col-lg-7 item-text-style">
                                 <p>Looking cautiously round,to ascertain that they</p>
@@ -463,7 +463,7 @@
                         <hr>
                         <div class="row footer-items">
                             <div class="col-md-12 col-lg-5">
-                                <img src="./images/gray.jpg" alt="">
+                                <img src="./images/item14.png" alt="">
                             </div>
                             <div class="col-md-12 col-lg-7 item-text-style">
                                 <p>Revolutions of government has would make his</p>
