--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
         </div>
         <!-- navigation bar -->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark icon-style">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark icon-style">
             <div class="container">
                 <a class="navbar-brand" href="#search">
                     <img src="./images/search.png" alt="">
@@ -51,14 +51,11 @@
                         <a class="nav-link" href="#favourite">
                             <img src="./images/favourite.png" alt="">
                         </a>
-                        <a class="nav-link cart-view">
-                            <div class="cart-items-number">
+                        <a class="nav-link cart-view cart-items-number">
                             <img id="cart-button" src="./images/cart.png" alt="">
                             <div class="show-number">
                                 <span id="cart-size-number">2</span>
                             </div>
-                            <!-- <img id="cart-button" src="./images/cart.png" alt="">
-                            <div class="cart-size"><span id="cart-size">2</span></div> -->
                         </a>
                     </div>
                 </div>
@@ -95,7 +92,7 @@
                         <p>Quantity : 1</p>
                     </div>
                     <button id='secondB' class='btn btn-danger ml-auto'>X</button>
-                </div> 
+                </div>
                 <h4 id='nothing'>No items in your cart</h4>
                 <button class="btn btn-info" id='hide-cart'>Hide Cart</button>
             </div>
