--- a/home.html
+++ b/home.html
@@ -69,36 +69,40 @@
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                       <div class="row">
-                          <div class="col-md-6">
+                          <div class="col-12 col-sm-12 col-md-6 col-lg-6">
                             <div class="row">
-                                <div class="col-md-4">
+                                <div class="col-3 col-sm-3 col-md-4">
 
                                 </div>
-                                <div class="col-md-8">
+                                <div class="col-6 col-sm-6 col-md-8">
                                     <small>what you're</small>
                                     <h3>Looking for</h3>
                                     <a class="a-image" href="">Go to shop <img src="./homeimages/arrow.png" alt=""></a>
                                 </div>
-                                <div class="col-md-2">
+                                <div class="col-3 col-sm-3 col-md-2">
                                 </div>
-                                <div class="col-md-8 ccs">
-                                    <img class="d-block w-100" src="./homeimages/gray.jpg" alt="First slide">
+                                <div class="col-2 col-sm-2 col-md-2">
                                 </div>
-                                <div class="col-md-2">
+                                <div class="col-7 col-sm-7 col-md-7 ccs">
+                                    <img class="d-block w-100" src="./homeimages/offwhite.jpg" alt="First slide">
+                                </div>
+                                <div class="col-2 col-sm-2 col-md-2">
                                 </div>
                             </div>
                           </div>
-                          <div class="col-md-6 ccb">
+                          <br>
+                          <div class="col-12 col-sm-12 col-md-6 col-lg-6 ccb">
                             <div class="row">
-                                <div class="col-md-10">
+                                <div class="col-2 col-sm-2 col-md-1"></div>
+                                <div class="col-8 col-sm-8 col-md-8">
                                     <img class="d-block w-100" src="./homeimages/gray.jpg" alt="First slide">
                                 </div>
-                                <div class="col-md-2"></div>
+                                <div class="col-2 col-sm-2 col-md-2"></div>
                             </div>
                         </div>
                       </div>
                   </div>
-                  <div class="carousel-item">
+                  <!-- <div class="carousel-item">
                     <div class="row">
                         <div class="col-md-6">
                           <div class="row">
@@ -128,8 +132,8 @@
                           </div>
                       </div>
                     </div>
-                  </div>
-                  <div class="carousel-item">
+                  </div> -->
+                  <!-- <div class="carousel-item">
                     <div class="row">
                         <div class="col-md-6">
                           <div class="row">
@@ -159,7 +163,7 @@
                           </div>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
