--- a/cart.html
+++ b/cart.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lenox</title>
     <link rel="stylesheet" href="./css/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="./css/custom/style.css">
+    <link rel="stylesheet" href="./css/custom/cart.css">
 </head>
 
 <body>
@@ -14,18 +14,18 @@
         <!-- icon and social link -->
         <div class="container head icon-style d-flex ">
             <div class="d-flex">
-                <img src="./images/icon.png" alt="">
+                <img src="./images/icons/icon.png" alt="">
                 <h3>lenox <sub>store</sub> </h3>
             </div>
             <div class="d-flex ml-auto">
                 <a class="social" href="#twitter">
-                    <img src="./images/blacktwitter.png" alt="">
+                    <img src="./images/icons/blacktwitter.png" alt="">
                 </a>
                 <a class="social" href="#google">
-                    <img src="./images/blackgoogle.png" alt="">
+                    <img src="./images/icons/blackgoogle.png" alt="">
                 </a>
                 <a class="social" href="#facebook">
-                    <img src="./images/blackfacebook.png" alt="">
+                    <img src="./images/icons/blackfacebook.png" alt="">
                 </a>
             </div>
         </div>
@@ -33,7 +33,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark icon-style">
             <div class="container">
                 <a class="navbar-brand" href="#search">
-                    <img src="./images/search.png" alt="">
+                    <img src="./images/icons/search.png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
                     aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,18 +41,18 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link " href="#home">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link " href="/index.html">Home <span class="sr-only">(current)</span></a>
                         <a class="nav-link" href="#campaign">Campaign</a>
-                        <a class="nav-link" href="#blog">Blog</a>
-                        <a class="nav-link active" href="index.html">Store</a>
+                        <a class="nav-link" href="/store.html">Blog</a>
+                        <a class="nav-link active" href="/store.html">Store</a>
                         <a class="nav-link" href="#contacts">Contacts</a>
                     </div>
                     <div class="navbar-nav ml-auto">
                         <a class="nav-link" href="#favourite">
-                            <img src="./images/favourite.png" alt="">
+                            <img src="./images/icons/favourite.png" alt="">
                         </a>
                         <!-- <a class="nav-link" href="#cart">
-                            <img src="./images/cart.png" alt="">
+                            <img src="./images/icons/cart.png" alt="">
                         </a> -->
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                                         <button id="first" class="cross">X</button>
                                     </div>
                                     <div class="col-12 col-sm-5">
-                                        <img src="./images/item1.jpg" alt="">
+                                        <img src="./images/items/item1.jpg" alt="">
                                     </div>
                                     <div class="col-12 col-sm-5">
                                         <p>'Design and Typography' by G. williams</p>
@@ -133,7 +133,7 @@
                                         <button id="second" class="cross">X</button>
                                     </div>
                                     <div class="col-12 col-sm-5">
-                                        <img src="./images/item2.jpg" alt="">
+                                        <img src="./images/items/item2.jpg" alt="">
                                     </div>
                                     <div class="col-12 col-sm-5">
                                         <p>Lifestyle magazine Kinfolk</p>
@@ -240,7 +240,7 @@
                         <h5>Recent Post</h5>
                         <div class="row footer-items">
                             <div class="col-md-12 col-lg-5">
-                                <img src="./images/item15.png" alt="">
+                                <img src="./images/items/item15.png" alt="">
                             </div>
                             <div class="col-md-8 col-lg-7 item-text-style">
                                 <p>Looking cautiously round,to ascertain that they</p>
@@ -250,7 +250,7 @@
                         <hr>
                         <div class="row footer-items">
                             <div class="col-md-12 col-lg-5">
-                                <img src="./images/item14.png" alt="">
+                                <img src="./images/items/item14.png" alt="">
                             </div>
                             <div class="col-md-12 col-lg-7 item-text-style">
                                 <p>Revolutions of government has would make his</p>
@@ -267,11 +267,11 @@
                     </div>
                 </div>
                 <div class="container row low">
-                    <img src="./images/whitetwitter.png" alt="">
-                    <img src="./images/whitegoogle.png" alt="">
-                    <img src="./images/whitefacebook.png" alt="">
-                    <img src="./images/whitelinkedin.png" alt="">
-                    <img src="./images/whiteyoutube.png" alt="">
+                    <img src="./images/icons/whitetwitter.png" alt="">
+                    <img src="./images/icons/whitegoogle.png" alt="">
+                    <img src="./images/icons/whitefacebook.png" alt="">
+                    <img src="./images/icons/whitelinkedin.png" alt="">
+                    <img src="./images/icons/whiteyoutube.png" alt="">
                 </div>
             </div>
         </section>
@@ -279,13 +279,13 @@
             <div class="container d-flex">
                 <p>&copy; 2016 - Lenox Multi-Concept Template</p>
                 <p class='ml-auto'>Created by
-                    <img src="./images/icon.png" alt="">
+                    <img src="./images/icons/icon.png" alt="">
                     Tareq</p>
             </div>
 
         </section>
     </footer>
-    <script src="./js/custom/calculation.js"></script>
+    <script src="./js/custom/cart.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
