--- a/store.html
+++ b/store.html
@@ -113,15 +113,19 @@
                 <div class="col-12 col-sm-8 col-md-7 col-lg-8">
                     <div class="row items">
                         <div class="col-6 col-sm-6 col-md-6 col-lg-4">
-                            <select class="form-control">
+                            <select id="select" onchange="selectOption()" class="form-control">
                                 <option>Default sorting</option>
+                                <option>Price low to high</option>
+                                <option>Price high to low</option>
                                 <option>Sort by category</option>
                             </select>
+                            <!-- <option id="lowToHigh">Price low to high</option>
+                            <option id="highToLow">Price high to low</option> -->
                         </div>
                         <div class="col-6 col-sm-6 col-md-6 col-lg-4">
                             <div class="convert">
-                                <button id="asc">Ascending</button>
-                                <button id="desc">Descending</button>
+                                <button id="asc"><img src="./images/icons/ascending.png" alt=""></button>
+                                <button id="desc"><img src="./images/icons/descending.png" alt=""></button>
                                 </button>
                             </div>
                         </div>
