--- a/campaign.html
+++ b/campaign.html
@@ -107,7 +107,9 @@
             <div class="campaign container">
                 <br>
                 <h3>Our Campaigns :</h3>
-                <br>
+                <hr>
+                <h4>Social media controlling</h4>
+                <p></p>
                 <div class="row">
                     <div class="col-8 col-sm-8 col-md-5 big">
                         <img src="./images/items/campaign1.jpg" alt="">
@@ -122,7 +124,8 @@
                     </div>
                 </div>
                 <hr>
-                <br>
+                <h4>Social media awareness</h4>
+                <p></p>
                 <div class="row">
                     <div class="col-8 col-sm-8 col-md-5 big">
                         <img src="./images/items/campaign4.jpg" alt="">
@@ -137,7 +140,8 @@
                     </div>
                 </div>
                 <hr>
-                <br>
+                <h4>Save our forest</h4>
+                <p></p>
                 <div class="row">
                     <div class="col-8 col-sm-8 col-md-5 big">
                         <img src="./images/items/campaign9.jpg" alt="">
@@ -152,7 +156,8 @@
                     </div>
                 </div>
                 <hr>
-                <br>
+                <h4>They need respect</h4>
+                <p></p>
                 <div class="row">
                     <div class="col-8 col-sm-8 col-md-5 big">
                         <img src="./images/items/campaign10.jpg" alt="">
